// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PropertyTypeFilterViewMapControl renders correctly when collapsed 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button style="display: none;" title="Query listings with current property types">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
</div>
`;

exports[`PropertyTypeFilterViewMapControl renders correctly when expanded 1`] = `
<div class="layer-container">
  <button title="Show property type filter control">
    <svg aria-hidden="true" class="svg-inline--fa fa-home fa-w-18" data-icon="home" data-prefix="fas" focusable="false" role="img" viewBox="0 0 576 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M280.37 148.26L96 300.11V464a16 16 0 0 0 16 16l112.06-.29a16 16 0 0 0 15.92-16V368a16 16 0 0 1 16-16h64a16 16 0 0 1 16 16v95.64a16 16 0 0 0 16 16.05L464 480a16 16 0 0 0 16-16V300L295.67 148.26a12.19 12.19 0 0 0-15.3 0zM571.6 251.47L488 182.56V44.05a12 12 0 0 0-12-12h-56a12 12 0 0 0-12 12v72.61L318.47 43a48 48 0 0 0-61 0L4.34 251.47a12 12 0 0 0-1.6 16.9l25.5 31A12 12 0 0 0 45.15 301l235.22-193.74a12.19 12.19 0 0 1 15.3 0L530.9 301a12 12 0 0 0 16.9-1.6l25.5-31a12 12 0 0 0-1.7-16.93z" fill="currentColor" />
    </svg>
  </button>
  <button style title="Query listings with current property types">
    <svg aria-hidden="true" class="svg-inline--fa fa-check fa-w-16 fa-lg" data-icon="check" data-prefix="fas" focusable="false" role="img" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg">
      <path class="" d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z" fill="currentColor" />
    </svg>
  </button>
  <ul class="layer-options expanded">
    <li>
      <label for="p_house_type">
        <input id="p_house_type" type="checkbox" value="House"> House
      </label>
    </li>
    <li>
      <label for="p_townhouse_type">
        <input id="p_townhouse_type" type="checkbox" value="Townhouse"> Townhouse
      </label>
    </li>
    <li>
      <label for="p_unit_type">
        <input id="p_unit_type" type="checkbox" value="ApartmentUnitFlat"> Unit
      </label>
    </li>
  </ul>
</div>
`;
